tests/contract_testcases/polkadot/inheritance/test_interface_03.sol

        interface foo {
            function bar() internal;
        }
        
// ---- Expect: diagnostics ----
// error: 3:13-36: functions must be declared 'external' in an interface
